--- a/index.html
+++ b/index.html
@@ -214,7 +214,14 @@
 
 <h1>关于电脑VPN的问题</h1>
         <p>
-<div class="comment-section">
+<p>目前电脑VPN：
+<p>安心（维修中）
+<p>安易（不在提供免费节点)
+<p>白鲸（免费30天）
+<p>nthlink(免费)
+<p><a href="https://abcd136.github.io/1f/" style="color: black; text-decoration: none;">迷雾通</a>（限速300kbkb/s)
+<p><a href="https://abcd136.github.io/2f/" style="color: black; text-decoration: none;">Proton</a>(免费速度慢，超安全)   
+<p><div class="comment-section">
   <h3>评论内容</h3>
   <ul class="comment-list" id="comment-list">
     <!-- Comments will be added here -->
